--- a/agblox_hw/package.json
+++ b/agblox_hw/package.json
@@ -6,12 +6,14 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "chroma-js": "^2.0.3",
     "d3": "^5.9.2",
     "d3-time-format": "^2.1.3",
     "papaparse": "^4.6.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
