--- a/agblox_hw/package.json
+++ b/agblox_hw/package.json
@@ -10,8 +10,10 @@
     "d3": "^5.9.2",
     "d3-time-format": "^2.1.3",
     "papaparse": "^4.6.3",
+    "plotly.js": "^1.46.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-plotly.js": "^2.3.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0"
   },
