--- a/agblox_hw/package.json
+++ b/agblox_hw/package.json
@@ -11,6 +11,7 @@
     "d3-time-format": "^2.1.3",
     "papaparse": "^4.6.3",
     "plotly.js": "^1.46.1",
+    "rc-slider": "^8.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-plotly.js": "^2.3.0",
