--- a/agblox_hw/package.json
+++ b/agblox_hw/package.json
@@ -9,6 +9,7 @@
     "chroma-js": "^2.0.3",
     "d3": "^5.9.2",
     "d3-time-format": "^2.1.3",
+    "lodash": "^4.17.11",
     "papaparse": "^4.6.3",
     "plotly.js": "^1.46.1",
     "rc-slider": "^8.6.9",
