--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chroma-js": "^2.0.3",
     "d3": "^5.9.2",
     "d3-time-format": "^2.1.3",
+    "gh-pages": "^2.0.1",
     "lodash": "^4.17.11",
     "papaparse": "^4.6.3",
     "plotly.js": "^1.46.1",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +36,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://jpramassini.github.io/agblox_challenge/"
 }
